# AINews

./: .gitignore  README.md  ai-news-blog-prd.md  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
ainews/: __init__.py  article.py  cli.py  compare.py  config.py  content.py  daily.py  dedup.py  generate.py  models.py  monitor.py  pipeline.py  quality.py  relevance.py  store.py
ainews/site/: __init__.py  build.py
ainews/site/static/: archive.js  style.css
ainews/site/templates/: archive.html  base.html  index.html  post.html
ainews/sources/: __init__.py  base.py  rss.py
ainews/summarize/: __init__.py  base.py  extractive.py  llm.py
config/: scope.yaml  sources.yaml  summarizer.yaml
data/: ainews.db
tests/: conftest.py  test_article_store.py  test_compare.py  test_daily.py  test_dedup.py  test_generate.py  test_models.py  test_pipeline.py  test_quality.py  test_relevance.py  test_site.py  test_store.py
