[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ainews"
version = "0.1.0"
description = "Fully automated, highly-filtered AI news blog — discovery pipeline"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "PyYAML>=6.0.1",
    "trafilatura>=1.9.0",
    "anthropic>=0.69.0",
    "Jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ainews = "ainews.cli:main"

[tool.setuptools.packages.find]
include = ["ainews*"]

[tool.setuptools.package-data]
ainews = ["site/templates/*.html", "site/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
